# compilers_2020_05

./: .gitignore  Makefile  README.md  a.out  constraints.txt  cyth_boilerplate.pxd  demo.txt  exercise_compile_to_c.py  exercise_wasm.py  exercize-typecheck.py  func_models.py  hello.ll  hello_runtime.html  hellollvm.py  interp_models.py  interpret_file.py  interpret_source.py  main.c  out.c  p.py  parser.out  parser_exerciser.py  pyproject.toml  q.py  script_models.py  setup.py  test.py  test.sh  test.wb  test_compile_to_c.py  test_llvm.wb  test_model.py  test_script_models.py  testall.bat  testlex.py  token_exerciser.py  tox.ini  type_models.py  utils.py  wasm_index.html
SillyWabbit/: README.rst  prog2.wb  prog3.wb  prog4.wb  prog5.wb  wabbit.py
exercises/: Cargo.toml  recursion.el  recursion.py
llvm_tutorial/: hellollvm.py  hellollvm_jit.py  main.c  notes.md
metal/: metal.py
myfolder/: fact.py  hello.ll  hello.s  hellollvm.py  main.c  proc.c
notes/: chat_day2.txt
recursion/: exercise_r1.py  exercise_r2.py  exercise_r3.py  exercise_r4.py  exercise_r5.py  exercise_r6.py
scripts/: setup.sh  wwpd_ast.py
tests/: dynamic_scope.wb  dynamicscope.wb  interp.py  script_tests.py  test_cython_scripts.py  test_script  test_script_examples  test_tokenize.py
wabbit/: c.py  check.py  check_syntax.py  cyth.py  decompile.py  decompiler.py  dis.py  env.py  error.py  errors.py  format_json.py  format_source.py  handparse.py  handtok.py  hardparse.py  interp.py  llvm.py  minc.py  model.py  parse.py  scope.py  source.py  source_visitor.py  test_c.py  test_interp.py  wasm.py  (+9 more)
(+54 files in other folders)
