[tool.poetry]
name = "compiler"
version = "0.1.0"
description = "A compiler for WabbitScript"
authors = ["Naz <n@naz.io>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
sly = "^0.4"
pytest-watch = "^4.2.0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
